tests/suite/snapshots/suite__parse__tests__parse__bad-function.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad-function.xi:2:5]
   │
 2 │     return 1
   ·     ───┬──  
   ·        ╰──── Unexpected token
───╯

