tests/suite/snapshots/suite__parse__tests__parse__bad-int.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
2:15 error:Invalid integer literal
