tests/suite/snapshots/suite__parse__tests__parse__bad-neg-maxint.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad-neg-maxint.xi:2:9]
   │
 2 │     x = -999999999999999999999999999999999999999999999999999999999999999999
   ·         ─────────────────────────────────┬─────────────────────────────────  
   ·                                          ╰─────────────────────────────────── Invalid integer literal
───╯

