tests/suite/snapshots/suite__parse__tests__parse__bad-procedure.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad-procedure.xi:2:5]
   │
 2 │     return
   ·     ───┬──  
   ·        ╰──── Unexpected token
───╯

