tests/suite/snapshots/suite__parse__tests__parse__bad-program.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
1:5 error:Unexpected eof
