tests/suite/snapshots/suite__parse__tests__parse__bad-use-statement-loc.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad-use-statement-loc.xi:4:1]
   │
 4 │ use io
   · ─┬─  
   ·  ╰─── Unexpected token
───╯

