tests/suite/snapshots/suite__parse__tests__parse__bad_array_arg.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_array_arg.xi:1:5]
   │
 1 │ foo(a: int[1]) {}
   ·     ────┬────  
   ·         ╰────── Unexpected length in array type
───╯

