tests/suite/snapshots/suite__parse__tests__parse__bad_array_dim_assign_1.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_array_dim_assign_1.xi:3:5]
   │
 3 │     a:int[2] = {2}
   ·     ────┬───  
   ·         ╰───── Unexpected length in array type
───╯

