tests/suite/snapshots/suite__parse__tests__parse__bad_array_return.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_array_return.xi:1:8]
   │
 1 │ foo(): int[1] {}
   ·        ───┬──  
   ·           ╰──── Unexpected length in array type
───╯

