tests/suite/snapshots/suite__parse__tests__parse__bad_int.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_int.xi:2:15]
   │
 2 │     x:int = -(9223372036854775808)
   ·               ─────────┬─────────  
   ·                        ╰─────────── Invalid integer literal
───╯

